--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Personal Site Of Javior</title>
+    <style>
+        body{
+            background-color: #fdffbc;
+        }
+        hr{
+            background-color: red;
+            border-style: none;
+            height: 2px;
+        }
+        img {
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            padding: 0px;
+            width: 250px;
+        }
+    </style>
 </head>
 <body>
     <table cellspacing="30">
