--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <title>Contact</title>
 </head>
 <body>
-    <h2>Me Contact Destails</h2>
+    <h2>Me Contact Details</h2>
     <br>
     <h3>My email: <strong>pep@stoicomun.llum</strong></h3>
     <h3>My phone: <strong>+555555555</strong></h3>
